--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   height: 500px;
 }
 
-.flights{
+.vacations{
   margin-top: 3%;
   transform: translateX(-20%); 
   margin-left: auto;
@@ -15,7 +15,7 @@
 }
 
 
-.flight{
+.vacation{
   height: 250px; 
     position: relative;
 }
